--- a/index.html
+++ b/index.html
@@ -582,6 +582,30 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="footer-media-text">Subscribe</p>
+          <label class="footer-subscribe">
+            <input
+              class="email-input"
+              type="email"
+              required
+              name="user-email"
+              placeholder="E-mail"
+            />
+          </label>
+          <div class="subscribe-btn-icon">
+            <button class="footer-subscribe-btn" type="submit">
+              Subscribe
+            </button>
+            <svg>
+              <use
+                href="./images/icons.svg#icon-send"
+                width="24px"
+                height="24px"
+              ></use>
+            </svg>
+          </div>
+        </div>
       </div>
     </footer>
 
