--- a/index.html
+++ b/index.html
@@ -584,39 +584,101 @@
         </div>
         <div class="footer-subscribe-container">
           <p class="footer-media-text">Subscribe</p>
-          <label class="footer-subscribe">
-            <input
-              class="email-input"
-              type="email"
-              required
-              name="user-email"
-              placeholder="E-mail"
-            />
-          </label>
-          <div class="subscribe-btn-icon">
-            <button class="footer-subscribe-btn" type="submit">
-              Subscribe
-            </button>
-            <svg>
-              <use
-                href="./images/icons.svg#icon-send"
-                width="24px"
-                height="24px"
-              ></use>
-            </svg>
+          <div class="footer-subscribe">
+            <label class="footer-subscribe-label">
+              <input
+                class="email-input"
+                type="email"
+                required
+                name="user-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <div class="subscribe-btn">
+              <button class="footer-subscribe-btn" type="submit">
+                Subscribe
+                <svg
+                  class="subscribe-btn-icon"
+                  width="24"
+                  height="20"
+                  aria-label="subscribe-button"
+                >
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </footer>
 
     <!-- МОДАЛЬНЕ ВІКНО -->
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="backdrop-modal-btn">
           <svg class="backdrop-modal-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-btn"></use>
           </svg>
         </button>
+
+        <form class="contact-form-wrapper">
+          <span class="contact-form-header"
+            >Leave your contacts and we will call you back</span
+          >
+          <label class="contact-form-field-wrapper" for="user_name">
+            Name
+          </label>
+          <input
+            class="contact-form-field"
+            type="text"
+            id="user_name"
+            name="user_name"
+            required
+            pattern="[a-zA-Zа-яА-ЯіІїЇєЄ'ґҐ]+"
+          />
+          <label class="contact-form-field-wrapper" for="user_tel">
+            Phone
+          </label>
+          <input
+            class="contact-form-field"
+            type="tel"
+            id="user_tel"
+            name="user_tel"
+            required
+            pattern="[[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}]"
+          />
+          <label class="contact-form-field-wrapper" for="user_email">
+            Email
+          </label>
+          <input
+            class="contact-form-field"
+            type="email"
+            id="user_email"
+            name="user_email"
+            required
+            pattern=""
+          />
+          <label class="contact-form-field-wrapper" for="user_comment">
+            Comment
+          </label>
+          <textarea
+            class="contact-form-comment"
+            name="user_comment"
+            id="user_comment"
+            placeholder="Text input"
+          ></textarea>
+          <label class="agreement-label">
+            <input
+              type="checkbox"
+              name="agreement"
+              value="agreement"
+              required
+            /><span class="agreement-text"
+              >I accept the terms and conditions of the</span
+            >
+            <a href=""><span class="agreement-text">Privacy Policy</span></a>
+          </label>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
