--- a/portfolio.html
+++ b/portfolio.html
@@ -349,6 +349,33 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="footer-media-text">Subscribe</p>
+          <div class="footer-subscribe">
+            <label class="footer-subscribe-label">
+              <input
+                class="email-input"
+                type="email"
+                required
+                name="user-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <div class="subscribe-btn">
+              <button class="footer-subscribe-btn" type="submit">
+                Subscribe
+                <svg
+                  class="subscribe-btn-icon"
+                  width="24"
+                  height="20"
+                  aria-label="subscribe-button"
+                >
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
