--- a/index.html
+++ b/index.html
@@ -729,13 +729,14 @@
               height="16"
               aria-label="icon-of-click"
             >
-              <use href="./images/icons.svg#icon-click"></use>
+              <use
+                class="agreement-icon"
+                href="./images/icons.svg#icon-click"
+              ></use>
             </svg>
 
-            <span class="agreement-text"
-              >I accept the terms and conditions of the
-              <a class="privacy-policy-link" href="">Privacy Policy</a></span
-            >
+            I accept the terms and conditions of the
+            <a class="privacy-policy-link" href="">Privacy Policy</a>
           </label>
 
           <!-- SUBMIT BUTTON -->
