--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
     </footer>
 
     <!-- МОДАЛЬНЕ ВІКНО -->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="backdrop-modal-btn">
           <svg class="backdrop-modal-btn-icon" width="8" height="8">
