--- a/portfolio.html
+++ b/portfolio.html
@@ -351,7 +351,7 @@
         </div>
         <div class="footer-subscribe-container">
           <p class="footer-media-text">Subscribe</p>
-          <div class="footer-subscribe">
+          <form class="footer-subscribe">
             <label class="footer-subscribe-label">
               <input
                 class="email-input"
@@ -367,14 +367,14 @@
                 <svg
                   class="subscribe-btn-icon"
                   width="24"
-                  height="20"
+                  height="24"
                   aria-label="subscribe-button"
                 >
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
             </div>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
