--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 
           <!--------  Privacy Policy-------->
 
-          <div class="agreement-wrapper">
+          <div class="aaaa">
             <input
               class="agreement-checkbox visually-hidden"
               type="checkbox"
